// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App create 1`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 kaBIYm"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 SwBcC"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 kBmKpw"
      >
        <header
          class="StyledBox-sc-13pk1d4-0 ddWnEB"
        >
          <div
            class="StyledGrid-sc-1wofa1l-0 eKCGXV"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 fHnER"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 btmBkA"
            >
              <h1
                class="StyledHeading-sc-1rdh4aw-0 cAgayz"
              >
                grommet designer
              </h1>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 eNXNOg"
            >
              <p
                class="StyledParagraph-sc-tbetod-0 jFCGap"
              >
                design with grommet components
              </p>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 jhhsov"
            >
              <a
                class="StyledButton-sc-323bzc-0 ixKVqh"
                href="/_new"
                title="start a new design"
              >
                New
              </a>
            </div>
          </div>
        </header>
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 czSjHt"
      />
      <div
        class="StyledBox-sc-13pk1d4-0 kfMTas"
      >
        <span
          class="StyledText-sc-1sadyjn-0 bdEwpE"
        >
          Hi, ... maybe create a new design?
        </span>
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 czSjHt"
      />
      <div
        class="StyledBox-sc-13pk1d4-0 kBmKpw"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 cMaVlV FileInput__ContentsBox-sc-1jzq7im-0 kTdnwJ"
        >
          <input
            accept=".json"
            class="StyledFileInput-sc-rl7ywv-0 kbWmgv"
            type="file"
          />
          <div
            class="StyledBox-sc-13pk1d4-0 fJDaxo"
          >
            <span
              class="StyledText-sc-1sadyjn-0 iWariV FileInput__Message-sc-1jzq7im-2 jtWzKo"
            >
              Import - drop design file here
            </span>
            <a
              class="StyledAnchor-sc-1rp7lwl-0 fsOcCa"
              tabindex="-1"
            >
              browse
            </a>
          </div>
        </div>
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 czSjHt"
      />
      <div
        class="StyledBox-sc-13pk1d4-0 jPgpNK"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 kBmKpw"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 QqAVZ"
          >
            <h2
              class="StyledHeading-sc-1rdh4aw-0 hSwQbi"
            >
              storage
            </h2>
            <div
              class="StyledBox__StyledBoxGap-sc-13pk1d4-1 KgEgG"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 jDwFVL"
            >
              <svg
                class="StyledMeter-sc-nsxarx-0 eicmGF"
                height="24"
                preserveAspectRatio="none"
                viewBox="0 0 384 24"
                width="384"
              >
                <path
                  d="M 0,12 L 384,12"
                  fill="none"
                  stroke="#F2F2F2"
                  stroke-linecap="square"
                  stroke-opacity="0.4"
                  stroke-width="24"
                />
              </svg>
              <div
                class="StyledBox__StyledBoxGap-sc-13pk1d4-1 kZyncG"
              />
              <span
                class="StyledText-sc-1sadyjn-0 dLjVqG"
              >
                0 K total
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 czSjHt"
      />
      <div
        class="StyledBox-sc-13pk1d4-0 kBmKpw"
      >
        <footer
          class="StyledBox-sc-13pk1d4-0 fooHWw"
        >
          <button
            aria-label="Change settings"
            class="StyledButton-sc-323bzc-0 gmegHV"
            type="button"
          >
            <svg
              aria-label="Brush"
              class="StyledIcon-sc-ofa7kd-0 jhNuel"
              viewBox="0 0 24 24"
            >
              <path
                d="M9.312 11.73a5.001 5.001 0 0 0-5.362 1.12c-1.953 1.952-1.414 8.485-1.414 8.485s6.532.538 8.485-1.415a5.001 5.001 0 0 0 1.12-5.362L22.334 4.364a1.997 1.997 0 0 0 0-2.828 1.995 1.995 0 0 0-2.828 0L9.312 11.729zm1.002-1.617 1.838 1.838 1.697 1.697"
                fill="none"
                stroke="#000"
                stroke-width="2"
              />
            </svg>
          </button>
        </footer>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`App create 2`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 kaBIYm"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 SwBcC"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 kBmKpw"
      >
        <header
          class="StyledBox-sc-13pk1d4-0 jDzSLj"
        >
          <div
            class="StyledGrid-sc-1wofa1l-0 eKCGXV"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 fHnER"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 btmBkA"
            >
              <h1
                class="StyledHeading-sc-1rdh4aw-0 cAgayz"
              >
                new design
              </h1>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 eNXNOg"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 jhhsov"
            >
              <button
                aria-label="cancel creating a new design"
                class="StyledButton-sc-323bzc-0 eetRLV"
                type="button"
              >
                <svg
                  aria-label="Close"
                  class="StyledIcon-sc-ofa7kd-0 jhNuel"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="m3 3 18 18M3 21 21 3"
                    fill="none"
                    stroke="#000"
                    stroke-width="2"
                  />
                </svg>
              </button>
            </div>
          </div>
        </header>
        <form>
          <div
            class="StyledBox-sc-13pk1d4-0 ljTOXS FormField__FormFieldBox-sc-m9hood-0 iLyaEy"
          >
            <label
              class="StyledText-sc-1sadyjn-0 jcdGCF"
              for="name"
            >
              name
            </label>
            <div
              class="StyledBox-sc-13pk1d4-0 fptPIw FormField__FormFieldContentBox-sc-m9hood-1 efnPPG"
            >
              <div
                class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 esbWVR"
              >
                <input
                  autocomplete="off"
                  class="StyledTextInput-sc-1x30a0s-0 bIwrn"
                  id="name"
                  name="name"
                  value=""
                />
              </div>
            </div>
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 hKBwJX"
            id="startWith"
            role="radiogroup"
          >
            <label
              class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 dgrQDw"
              for="startWith-start with a blank design"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 drnaP StyledRadioButton-sc-g1f6ld-5 dBuIId"
              >
                <input
                  checked=""
                  class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 hejpLO"
                  id="startWith-start with a blank design"
                  name="startWith"
                  tabindex="0"
                  type="radio"
                  value="start with a blank design"
                />
                <div
                  class="StyledBox-sc-13pk1d4-0 eMevux StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 cwdTGj"
                >
                  <svg
                    class="StyledRadioButton__StyledRadioButtonIcon-sc-g1f6ld-3 rxIYO"
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 24 24"
                  >
                    <circle
                      cx="12"
                      cy="12"
                      r="6"
                    />
                  </svg>
                </div>
              </div>
              <span
                class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
              >
                start with a blank design
              </span>
            </label>
            <div
              class="StyledBox__StyledBoxGap-sc-13pk1d4-1 kZyncG"
            />
            <label
              class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 dgrQDw"
              for="startWith-duplicate an existing design"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 drnaP StyledRadioButton-sc-g1f6ld-5 dBuIId"
              >
                <input
                  class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 hejpLO"
                  id="startWith-duplicate an existing design"
                  name="startWith"
                  tabindex="-1"
                  type="radio"
                  value="duplicate an existing design"
                />
                <div
                  class="StyledBox-sc-13pk1d4-0 fipWQV StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 cwdTGj"
                />
              </div>
              <span
                class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
              >
                duplicate an existing design
              </span>
            </label>
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 ljTOXS FormField__FormFieldBox-sc-m9hood-0 iLyaEy"
          >
            <label
              class="StyledText-sc-1sadyjn-0 jcdGCF"
            >
              theme
            </label>
            <div
              class="StyledBox-sc-13pk1d4-0 dqcGxt FormField__FormFieldContentBox-sc-m9hood-1"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 erPDEf"
                role="radiogroup"
              >
                <label
                  class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 dgrQDw"
                  for="grommet"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 drnaP StyledRadioButton-sc-g1f6ld-5 dBuIId"
                  >
                    <input
                      checked=""
                      class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 hejpLO"
                      id="grommet"
                      name="theme"
                      tabindex="0"
                      type="radio"
                      value="grommet"
                    />
                    <div
                      class="StyledBox-sc-13pk1d4-0 eMevux StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 cwdTGj"
                    >
                      <svg
                        class="StyledRadioButton__StyledRadioButtonIcon-sc-g1f6ld-3 rxIYO"
                        preserveAspectRatio="xMidYMid meet"
                        viewBox="0 0 24 24"
                      >
                        <circle
                          cx="12"
                          cy="12"
                          r="6"
                        />
                      </svg>
                    </div>
                  </div>
                  <span
                    class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
                  >
                    grommet
                  </span>
                </label>
                <div
                  class="StyledBox__StyledBoxGap-sc-13pk1d4-1 kZyncG"
                />
                <label
                  class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 dgrQDw"
                  for="hpe"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 drnaP StyledRadioButton-sc-g1f6ld-5 dBuIId"
                  >
                    <input
                      class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 hejpLO"
                      id="hpe"
                      name="theme"
                      tabindex="-1"
                      type="radio"
                      value="hpe"
                    />
                    <div
                      class="StyledBox-sc-13pk1d4-0 fipWQV StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 cwdTGj"
                    />
                  </div>
                  <span
                    class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
                  >
                    hpe
                  </span>
                </label>
                <div
                  class="StyledBox__StyledBoxGap-sc-13pk1d4-1 kZyncG"
                />
                <label
                  class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 dgrQDw"
                  for="other"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 drnaP StyledRadioButton-sc-g1f6ld-5 dBuIId"
                  >
                    <input
                      class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 hejpLO"
                      id="other"
                      name="theme"
                      tabindex="-1"
                      type="radio"
                      value="other"
                    />
                    <div
                      class="StyledBox-sc-13pk1d4-0 fipWQV StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 cwdTGj"
                    />
                  </div>
                  <span
                    class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
                  >
                    other
                  </span>
                </label>
              </div>
            </div>
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 ljTOXS FormField__FormFieldBox-sc-m9hood-0 iLyaEy"
          >
            <label
              class="StyledText-sc-1sadyjn-0 jcdGCF"
              for="includes"
            >
              include other designs to be able to copy their components
            </label>
            <div
              class="StyledBox-sc-13pk1d4-0 fptPIw FormField__FormFieldContentBox-sc-m9hood-1"
            >
              <button
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-label="none"
                class="StyledButton-sc-323bzc-0 hsuWOO StyledSelect__StyledSelectDropButton-sc-znp66n-5 hUWBTW"
                type="button"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 kEUDyz"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 IxTtJ"
                  >
                    <div
                      class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 esbWVR"
                    >
                      <input
                        autocomplete="off"
                        class="StyledTextInput-sc-1x30a0s-0 bIwrn StyledSelect__SelectTextInput-sc-znp66n-4 ldRtXx"
                        name="includes"
                        placeholder="none"
                        readonly=""
                        tabindex="-1"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                  <div
                    class="StyledBox-sc-13pk1d4-0 kpKaew"
                    style="min-width: auto;"
                  >
                    <svg
                      aria-label="FormDown"
                      class="StyledIcon-sc-ofa7kd-0 emcSuR"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="m18 9-6 6-6-6"
                        fill="none"
                        stroke="#000"
                        stroke-width="2"
                      />
                    </svg>
                  </div>
                </div>
              </button>
            </div>
          </div>
          <footer
            class="StyledBox-sc-13pk1d4-0 lglPcM"
          >
            <button
              class="StyledButton-sc-323bzc-0 ixKVqh"
              title="create design"
              type="submit"
            >
              Create Design
            </button>
          </footer>
        </form>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`App create 3`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 kaBIYm"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 SwBcC"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 kBmKpw"
      >
        <header
          class="StyledBox-sc-13pk1d4-0 jDzSLj"
        >
          <div
            class="StyledGrid-sc-1wofa1l-0 eKCGXV"
          >
            <div
              class="StyledBox-sc-13pk1d4-0 fHnER"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 btmBkA"
            >
              <h1
                class="StyledHeading-sc-1rdh4aw-0 cAgayz"
              >
                new design
              </h1>
            </div>
            <div
              class="StyledBox-sc-13pk1d4-0 eNXNOg"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 jhhsov"
            >
              <button
                aria-label="cancel creating a new design"
                class="StyledButton-sc-323bzc-0 eetRLV"
                type="button"
              >
                <svg
                  aria-label="Close"
                  class="StyledIcon-sc-ofa7kd-0 jhNuel"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="m3 3 18 18M3 21 21 3"
                    fill="none"
                    stroke="#000"
                    stroke-width="2"
                  />
                </svg>
              </button>
            </div>
          </div>
        </header>
        <form>
          <div
            class="StyledBox-sc-13pk1d4-0 ljTOXS FormField__FormFieldBox-sc-m9hood-0 iLyaEy"
          >
            <label
              class="StyledText-sc-1sadyjn-0 jcdGCF"
              for="name"
            >
              name
            </label>
            <div
              class="StyledBox-sc-13pk1d4-0 fptPIw FormField__FormFieldContentBox-sc-m9hood-1 efnPPG"
            >
              <div
                class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 esbWVR"
              >
                <input
                  autocomplete="off"
                  class="StyledTextInput-sc-1x30a0s-0 bIwrn"
                  id="name"
                  name="name"
                  value="test design"
                />
              </div>
            </div>
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 hKBwJX"
            id="startWith"
            role="radiogroup"
          >
            <label
              class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 dgrQDw"
              for="startWith-start with a blank design"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 drnaP StyledRadioButton-sc-g1f6ld-5 dBuIId"
              >
                <input
                  checked=""
                  class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 hejpLO"
                  id="startWith-start with a blank design"
                  name="startWith"
                  tabindex="0"
                  type="radio"
                  value="start with a blank design"
                />
                <div
                  class="StyledBox-sc-13pk1d4-0 eMevux StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 cwdTGj"
                >
                  <svg
                    class="StyledRadioButton__StyledRadioButtonIcon-sc-g1f6ld-3 rxIYO"
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 24 24"
                  >
                    <circle
                      cx="12"
                      cy="12"
                      r="6"
                    />
                  </svg>
                </div>
              </div>
              <span
                class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
              >
                start with a blank design
              </span>
            </label>
            <div
              class="StyledBox__StyledBoxGap-sc-13pk1d4-1 kZyncG"
            />
            <label
              class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 dgrQDw"
              for="startWith-duplicate an existing design"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 drnaP StyledRadioButton-sc-g1f6ld-5 dBuIId"
              >
                <input
                  class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 hejpLO"
                  id="startWith-duplicate an existing design"
                  name="startWith"
                  tabindex="-1"
                  type="radio"
                  value="duplicate an existing design"
                />
                <div
                  class="StyledBox-sc-13pk1d4-0 fipWQV StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 cwdTGj"
                />
              </div>
              <span
                class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
              >
                duplicate an existing design
              </span>
            </label>
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 ljTOXS FormField__FormFieldBox-sc-m9hood-0 iLyaEy"
          >
            <label
              class="StyledText-sc-1sadyjn-0 jcdGCF"
            >
              theme
            </label>
            <div
              class="StyledBox-sc-13pk1d4-0 dqcGxt FormField__FormFieldContentBox-sc-m9hood-1"
            >
              <div
                class="StyledBox-sc-13pk1d4-0 erPDEf"
                role="radiogroup"
              >
                <label
                  class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 dgrQDw"
                  for="grommet"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 drnaP StyledRadioButton-sc-g1f6ld-5 dBuIId"
                  >
                    <input
                      checked=""
                      class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 hejpLO"
                      id="grommet"
                      name="theme"
                      tabindex="0"
                      type="radio"
                      value="grommet"
                    />
                    <div
                      class="StyledBox-sc-13pk1d4-0 eMevux StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 cwdTGj"
                    >
                      <svg
                        class="StyledRadioButton__StyledRadioButtonIcon-sc-g1f6ld-3 rxIYO"
                        preserveAspectRatio="xMidYMid meet"
                        viewBox="0 0 24 24"
                      >
                        <circle
                          cx="12"
                          cy="12"
                          r="6"
                        />
                      </svg>
                    </div>
                  </div>
                  <span
                    class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
                  >
                    grommet
                  </span>
                </label>
                <div
                  class="StyledBox__StyledBoxGap-sc-13pk1d4-1 kZyncG"
                />
                <label
                  class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 dgrQDw"
                  for="hpe"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 drnaP StyledRadioButton-sc-g1f6ld-5 dBuIId"
                  >
                    <input
                      class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 hejpLO"
                      id="hpe"
                      name="theme"
                      tabindex="-1"
                      type="radio"
                      value="hpe"
                    />
                    <div
                      class="StyledBox-sc-13pk1d4-0 fipWQV StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 cwdTGj"
                    />
                  </div>
                  <span
                    class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
                  >
                    hpe
                  </span>
                </label>
                <div
                  class="StyledBox__StyledBoxGap-sc-13pk1d4-1 kZyncG"
                />
                <label
                  class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 dgrQDw"
                  for="other"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 drnaP StyledRadioButton-sc-g1f6ld-5 dBuIId"
                  >
                    <input
                      class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 hejpLO"
                      id="other"
                      name="theme"
                      tabindex="-1"
                      type="radio"
                      value="other"
                    />
                    <div
                      class="StyledBox-sc-13pk1d4-0 fipWQV StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 cwdTGj"
                    />
                  </div>
                  <span
                    class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
                  >
                    other
                  </span>
                </label>
              </div>
            </div>
          </div>
          <div
            class="StyledBox-sc-13pk1d4-0 ljTOXS FormField__FormFieldBox-sc-m9hood-0 iLyaEy"
          >
            <label
              class="StyledText-sc-1sadyjn-0 jcdGCF"
              for="includes"
            >
              include other designs to be able to copy their components
            </label>
            <div
              class="StyledBox-sc-13pk1d4-0 fptPIw FormField__FormFieldContentBox-sc-m9hood-1"
            >
              <button
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-label="none"
                class="StyledButton-sc-323bzc-0 hsuWOO StyledSelect__StyledSelectDropButton-sc-znp66n-5 hUWBTW"
                type="button"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 kEUDyz"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 IxTtJ"
                  >
                    <div
                      class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 esbWVR"
                    >
                      <input
                        autocomplete="off"
                        class="StyledTextInput-sc-1x30a0s-0 bIwrn StyledSelect__SelectTextInput-sc-znp66n-4 ldRtXx"
                        name="includes"
                        placeholder="none"
                        readonly=""
                        tabindex="-1"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                  <div
                    class="StyledBox-sc-13pk1d4-0 kpKaew"
                    style="min-width: auto;"
                  >
                    <svg
                      aria-label="FormDown"
                      class="StyledIcon-sc-ofa7kd-0 emcSuR"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="m18 9-6 6-6-6"
                        fill="none"
                        stroke="#000"
                        stroke-width="2"
                      />
                    </svg>
                  </div>
                </div>
              </button>
            </div>
          </div>
          <footer
            class="StyledBox-sc-13pk1d4-0 lglPcM"
          >
            <button
              class="StyledButton-sc-323bzc-0 ixKVqh"
              title="create design"
              type="submit"
            >
              Create Design
            </button>
          </footer>
        </form>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`App create 4`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 kaBIYm"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 hoOKdI"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 mmaYP"
      >
        <form>
          <div
            class="StyledBox-sc-13pk1d4-0 ljTOXS FormField__FormFieldBox-sc-m9hood-0 iLyaEy"
          >
            <label
              class="StyledText-sc-1sadyjn-0 jcdGCF"
              for="template"
            >
              screen template
            </label>
            <div
              class="StyledBox-sc-13pk1d4-0 fptPIw FormField__FormFieldContentBox-sc-m9hood-1"
            >
              <button
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-label="Open Drop; Selected: [object Object]"
                class="StyledButton-sc-323bzc-0 hsuWOO StyledSelect__StyledSelectDropButton-sc-znp66n-5 hUWBTW"
                id="template"
                type="button"
              >
                <div
                  class="StyledBox-sc-13pk1d4-0 kEUDyz"
                >
                  <div
                    class="StyledBox-sc-13pk1d4-0 IxTtJ"
                  >
                    <div
                      class="StyledBox-sc-13pk1d4-0 lihNbW"
                    >
                      <span
                        class="StyledText-sc-1sadyjn-0 eijTBE"
                      >
                        empty page
                      </span>
                      <div
                        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 kZyncG"
                      />
                      <span
                        class="StyledText-sc-1sadyjn-0 ckNgN"
                      >
                        generic
                      </span>
                    </div>
                    <input
                      class="StyledSelect__HiddenInput-sc-znp66n-2 damqmW"
                      id="template__input"
                      name="template"
                      readonly=""
                      type="text"
                      value=""
                    />
                  </div>
                  <div
                    class="StyledBox-sc-13pk1d4-0 kpKaew"
                    style="min-width: auto;"
                  >
                    <svg
                      aria-label="FormDown"
                      class="StyledIcon-sc-ofa7kd-0 emcSuR"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="m18 9-6 6-6-6"
                        fill="none"
                        stroke="#000"
                        stroke-width="2"
                      />
                    </svg>
                  </div>
                </div>
              </button>
            </div>
          </div>
          <footer
            class="StyledBox-sc-13pk1d4-0 VMPGb"
          >
            <button
              class="StyledButton-sc-323bzc-0 ixKVqh"
              title="Use selected screen template"
              type="submit"
            >
              Use Template
            </button>
          </footer>
        </form>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`App create 5`] = `
<DocumentFragment>
  <div
    class="StyledGrommet-sc-19lkkz7-0 kaBIYm"
  >
    <div
      class="StyledGrommet-sc-19lkkz7-0 eqOcWC"
      id="designer-canvas"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 plCOo"
        id="2"
        style="outline: 1px dashed red;"
        tabindex="-1"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 jEXSzc"
          id="3"
          tabindex="-1"
        >
          <div
            class="sc-gEvEer hYEsRU"
          >
            <p
              class="StyledParagraph-sc-tbetod-0 hjnZHW"
            >
              This PageContent is currently empty. Add some content to it.
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
